welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: not found: value cirgars
    case (cigars , isWeekend) if isWeekend == false && cirgars >= 40 && cigars <= 60 => true
                                                       ^cigarParty:4: error: not found: value cirgars
    case (cigars , isWeekend) if isWeekend == true && cirgars >= 40 => true
                                                      ^