welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  (cigars , isWeekend) match {
    case (cigars , isWeekend) if isWeekend == false && cirgars >= 40 && cigars <= 60 => true
    case (cigars , isWeekend) if isWeekend == true && cirgars >= 40 => true
    case (_,_) => false
  }
}